--- a/main.html
+++ b/main.html
@@ -1,37 +1,123 @@
 <!-- 캐러셀 섹션1 -->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/visual01.jpg" class="d-block w-100" alt="...">
+        <img src="img/visual01.jpg" class="d-block w-100" alt="img/visual01.jpg">
       </div>
       <div class="carousel-item">
-        <img src="img/visual02.jpg" class="d-block w-100" alt="...">
+        <img src="img/visual02.jpg" class="d-block w-100" alt="img/visual02.jpg">
       </div>
       <div class="carousel-item">
-        <img src="img/visual03.jpg" class="d-block w-100" alt="...">
+        <img src="img/visual03.jpg" class="d-block w-100" alt="img/visual03.jpg">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+   <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </button>
   </div>
 <!-- 섹션2 -->
-
+<div id="section2">
+<h1>THE SPECIAL DESIGN GROUP</h1>
+<p>파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 디자인 역량과 기술력에 집중하고<br>
+고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다.</p>
+<button type="button" class="btn btn-outline-secondary">Lean more</button>
+</div>
 <!-- 섹션3 -->
-
+<div id="section3">
+  <h1>PRODUCT</h1>
+  <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
+  <img src="img/m-mb01.jpg" class="section3img">
+</div>
 <!-- 섹션4 -->
-
+<div id="section4">
+  <h1>BUSINESS</h1>
+  <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
+</div>
+<div id="section4flex">
+<div class="section4-1">
+  <div class="section4-2">
+    <a href=""> <img src="img/m-op01.jpg" alt=""></a>
+    <p>사업분야01 <br>
+    고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+    보다 큰 감동을 드립니다.</p>
+  </div>
+</div>
+<div class="section4-1">
+  <div class="section4-2">
+    <a href=""> <img src="img/m-op01.jpg" alt=""></a>
+    <p>사업분야02 <br>
+      고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+      보다 큰 감동을 드립니다</p>
+  </div>
+</div>
+<div class="section4-1">
+  <div class="section4-2">
+    <a href=""> <img src="img/m-op01.jpg" alt=""></a>
+    <p>사업분야03 <br>
+      고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+      보다 큰 감동을 드립니다</p>
+  </div>
+</div>
+<div class="section4-1">
+  <div class="section4-2">
+    <a href=""> <img src="img/m-op01.jpg" alt=""></a>
+    <p>사업분야04 <br>
+      고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+      보다 큰 감동을 드립니다</p>
+  </div>
+  </div>
+</div>
 <!-- 섹션5 -->
-
+<div id="section5">
+  <img src="img/m-op04.jpg" alt="">
+  <div id="section5-1">
+  <h1>정직과 신뢰, 디자인</h1>
+  <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
+  <button type="button" class="btn btn-outline-secondary" class="absol">Lean more</button>
+  </div>
+  </div>
+</div>
 <!-- 섹션6 -->
+<div id="section6">
+  <h1>CS CENTER</h1>
+  <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께합니다</p>
+  </div>
+
+  <div id="cscenter">
+    <div id="cs">
+    <div id="cscenter-1">
+      <p>공지사항
+        <a href="">더보기</a>
+      </p>
+    </div>
+    <div id="cscenter-2">
+      <a href="">새로운 공지사항을 알려드립니다</a><br>
+      <a href="">새로운 공지사항을 알려드립니다</a><br>
+      <a href="">새로운 공지사항을 알려드립니다</a><br>
+    </div>
+  </div>
+  <div id="cs-3">
+    <a href="">
+      묻고 답하기 <br>
+      문의사항을 남기시면 친절히 답변드립니다.
+    </a>
+  </div>
+  <div id="cs-4">
+    <a href="">
+      채용안내 <br>
+      당사와 함께할 수 있는 인재를 모집합니다.
+    </a>
+  </div>
+  <div id="cs-5">
+    <a href="">
+      오시는 길<br>
+      당사의 약도 및 연락처를 보실 수 있습니다.
+    </a>
+  </div>
+</div>
 
