--- a/member/join.html
+++ b/member/join.html
@@ -50,7 +50,21 @@
 
   <!-- 메인 -->
   <!-- 회원가입 -->
-  
+  <div id="join">
+    <p>회원가입</p>
+    <p>The design and maintenance are excellent.</p>
+  </div>
+  <div id="join2">
+    <p>OOO사이트에 오신 것을 환영합니다.</p>
+    <p>-이름과 이메일을 입력해 주시면 가입여부를 확인 후 회원가입 절차가 이루어집니다.</p>
+  </div>
+  <div id="join3">
+    <div id="join4">
+    <input type="text" class="name" placeholder="이름" ><br>
+    <input type="email" class="name" placeholder="이메일" >
+  </div>
+    <button>확인</button>
+  </div>
 
 
   <!-- 푸터 -->
