--- a/product/product01.html
+++ b/product/product01.html
@@ -95,11 +95,17 @@
       <p class="title">제품안내01</p>
       <p id="eng">The design and maintenance are excellent.</p>
     </div>
-    <div class="row">
-      <div class="col"><img src="/img/product/1.jpg" alt="1" width="300px"></div>
-      <div class="col">col</div>
-      <div class="col">col</div>
-      <div class="col">col</div>
+    <div class="row" style="text-align: center;">
+      <div class="col"><img src="/img/product/1.jpg" alt="1" width="200px" height="200px">FS108</div>
+      <div class="col"><img src="/img/product/2.jpg" alt="1" width="200px" height="200px">FS107</div>
+      <div class="col"><img src="/img/product/3.jpg" alt="1" width="200px" height="200px">FS106</div>
+      <div class="col"><img src="/img/product/4.jpg" alt="1" width="200px" height="200px">FS105</div>
+    </div>
+    <div class="row" style="text-align: center;">
+      <div class="col"><img src="/img/product/5.jpg" alt="1" width="200px" height="200px">FS104</div>
+      <div class="col"><img src="/img/product/6.jpg" alt="1" width="200px" height="200px">FS103</div>
+      <div class="col"><img src="/img/product/7.jpg" alt="1" width="200px" height="200px">FS102</div>
+      <div class="col"><img src="/img/product/8.jpg" alt="1" width="200px" height="200px">FS101</div>
     </div>
   </div>
   <!-- search bar -->
