--- a/customer/customer01.html
+++ b/customer/customer01.html
@@ -97,7 +97,7 @@
         
       </div>
       <div id="form">
-        <div id="input">
+        <div id="input" style="margin-top: 40px">
           
           <div class="dropdown">
             <span class="input-text">구분</span>
