--- a/company/company01.html
+++ b/company/company01.html
@@ -111,16 +111,16 @@
 
     <div class="row" id="con">
       <div class="col">
-        <img src="/img/company/img0102.jpg" width="100%">
+        <img src="/img/company/img0102.jpg" width="400px">
       </div>
       <div class="col">
-          <h5>파이브스톤은 끊임없는 열정으로<br>
-            디자인 가치를 창조합니다.</h5>
+          <h4>파이브스톤은 끊임없는 열정으로<br>
+            디자인 가치를 창조합니다.</h4>
           <p class="sts2">파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 모든 기술과 디자인 역량을 집중하고
              고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다. 
              오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다. </p>
           <p style="font-size: 13px;"> 
-            · 회 사 : 파이브스톤(FIVESTONE Company)<br>
+            · 회 사 : <span style="color: red;">파이브스톤(FIVESTONE Company)</span><br>
             · 업 종 : 홈페이지제작<br>
             · 사 업 : 기업 홈페이지 구축(반응형웹, 모바일웹), 디자인, 그래픽<br>
             · 비 전 : 정직과 신뢰를 기반으로 한 디자인 가치창출<br>
