--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,14 @@
 <!-- footer -->
 <div class="footer">
-  <div class="container text-center">
-
+    <a href="">회사소개</a>
+    <a href="">개인정보보호정책</a>
+    <a href="">이메일무단수집거부</a>
+    <a href="">묻고답하기</a>
+    <a href="">오시는길</a>
   </div>
+  <div class="fivestone">
+    <p>회사: 파이브스톤, 주소: 경기도 고양시 삼송로 193번길 28-3 하준빌딩 401호, 대표:김성용,<br>
+    고객지원:010-2709-0828,FAX:070-777-5555,EMAIL:fivestone55@daum.net,사업자등록번호:780-42-00047,통신판매업<br>
+    제 2015-경기-00974호
+    COPYRIGHT 2020 FIVESTONE, ALL RIGHT RESERVED.</p>
 </div>
