--- a/company/company01.html
+++ b/company/company01.html
@@ -114,8 +114,8 @@
         <img src="/img/company/img0102.jpg" width="400px">
       </div>
       <div class="col">
-          <h4>파이브스톤은 끊임없는 열정으로<br>
-            디자인 가치를 창조합니다.</h4>
+          <h5>파이브스톤은 끊임없는 열정으로<br>
+            디자인 가치를 창조합니다.</h5>
           <p class="sts2">파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 모든 기술과 디자인 역량을 집중하고
              고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다. 
              오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다. </p>
@@ -140,28 +140,28 @@
 
     <div class="d-flex justify-content-center">
 
-    <div class="card" style="width: 15rem;">
+    <div class="card" style="width: 25%; height: 250px;">
       <img src="/img/company/img0103.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">CREATIVE</h5>
         <p class="card-text">파이브스톤은 창조적인 디자인으로 고객과 함께합니다.</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
+    <div class="card" style="width: 25%; height: 250px;">
       <img src="/img/company/img0104.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">CONFIDENCE</h5>
         <p class="card-text">파이브스톤은 고객과의 신뢰를 최우선으로 생각합니다.</p>
       </div>
     </div>
-    <div class="card"style="width: 15rem;">
+    <div class="card"style="width: 25%; height: 250px;">
       <img src="/img/company/img0105.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">PARTNERSHIP</h5>
         <p class="card-text">파이브스톤은 고객과의 협력을 통해 파트너쉽을 쌓아갑니다.</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
+    <div class="card" style="width: 25%; height: 250px;">
       <img src="/img/company/img0106.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">PASSION</h5>
@@ -172,14 +172,28 @@
     </div>
   </div>
 
-  
-<hr>
-
   <!-- 역사 -->
   <div class="container">
     <p class="title">HISTORY</p>
     <div class="sts3"><p>설립이후 파이브스톤이 걸어온 길을 알립니다.</p></div>
-
+    <div class="hist">
+      <h4>2017</h4>
+      <p class="hist2">10 정직과 신뢰의 기업 파이브스톤</p>
+      <p class="hist2">06 홈페이지 구축을 위한 최고의 선택 파이브스톤</p>
+      <p class="hist2">05 함께 할 수 있는 좋은 친구 파이브스톤</p>
+    </div>
+    <div class="hist" style="border-top: 1px dotted #999999;">
+      <h4>2016</h4>
+      <p class="hist2">10 정직과 신뢰의 기업 파이브스톤</p>
+      <p class="hist2">06 홈페이지 구축을 위한 최고의 선택 파이브스톤</p>
+      <p class="hist2">05 함께 할 수 있는 좋은 친구 파이브스톤</p>
+    </div>
+    <div class="hist" style="border-top: 1px dotted #999999;">
+      <h4>2015</h4>
+      <p class="hist2">10 정직과 신뢰의 기업 파이브스톤</p>
+      <p class="hist2">06 홈페이지 구축을 위한 최고의 선택 파이브스톤</p>
+      <p class="hist2">05 함께 할 수 있는 좋은 친구 파이브스톤</p>
+    </div>
 
   </div>
 
