--- a/main.html
+++ b/main.html
@@ -38,36 +38,36 @@
   <h1>BUSINESS</h1>
   <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
 </div>
-<div id="section4flex">
-<div class="section4-1">
+<div id="section4flex" class="col">
+<div class="section4-1" style="margin-right: 20px">
   <div class="section4-2">
     <a href=""> <img src="img/m-op01.jpg" alt=""></a>
-    <p>사업분야01 <br>
-    고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+    <p class="busititle">사업분야01</p>
+    <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
     보다 큰 감동을 드립니다.</p>
   </div>
 </div>
-<div class="section4-1">
+<div class="section4-1" style="margin-right: 20px">
   <div class="section4-2">
     <a href=""> <img src="img/m-op01.jpg" alt=""></a>
-    <p>사업분야02 <br>
-      고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+    <p class="busititle">사업분야02</p>
+    <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+      보다 큰 감동을 드립니다</p>
+  </div>
+</div>
+<div class="section4-1" style="margin-right: 20px">
+  <div class="section4-2">
+    <a href=""> <img src="img/m-op01.jpg" alt=""></a>
+    <p class="busititle">사업분야03</p>
+    <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
   </div>
 </div>
 <div class="section4-1">
   <div class="section4-2">
     <a href=""> <img src="img/m-op01.jpg" alt=""></a>
-    <p>사업분야03 <br>
-      고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
-      보다 큰 감동을 드립니다</p>
-  </div>
-</div>
-<div class="section4-1">
-  <div class="section4-2">
-    <a href=""> <img src="img/m-op01.jpg" alt=""></a>
-    <p>사업분야04 <br>
-      고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
+    <p class="busititle">사업분야04</p>
+    <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
   </div>
   </div>
