--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
   <h1>BUSINESS</h1>
   <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
 </div>
-<div id="section4flex" class="col">
+<div id="section4flex">
 <div class="section4-1" style="margin-right: 20px">
   <div class="section4-2">
     <a href=""> <img src="img/m-op01.jpg" alt=""></a>
@@ -74,12 +74,21 @@
 </div>
 <!-- 섹션5 -->
 <div id="section5">
-  <img src="img/m-op04.jpg" alt="">
+  
   <div id="section5-1">
+    <div class="carousel-item">
+      <img src="/img/visual04.jpg" alt="">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>정직과 신뢰, 디자인</h5>
+        <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
+        <button type="button" class="btn btn-outline-secondary" class="absol">Lean more</button>
+      </div>
+    </div>
+
+    <!-- <img src="img/visual04.jpg" alt="">
   <h1>정직과 신뢰, 디자인</h1>
   <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
-  <button type="button" class="btn btn-outline-secondary" class="absol">Lean more</button>
-  </div>
+  <button type="button" class="btn btn-outline-secondary" class="absol">Lean more</button> -->
   </div>
 </div>
 <!-- 섹션6 -->
@@ -92,31 +101,33 @@
     <div id="cs">
     <div id="cscenter-1">
       <p>공지사항
-        <a href="">더보기</a>
       </p>
     </div>
     <div id="cscenter-2">
-      <a href="">새로운 공지사항을 알려드립니다</a><br>
-      <a href="">새로운 공지사항을 알려드립니다</a><br>
-      <a href="">새로운 공지사항을 알려드립니다</a><br>
+      <a href="">· 새로운 공지사항을 알려드립니다</a><br>
+      <a href="">· 새로운 공지사항을 알려드립니다</a><br>
+      <a href="">· 새로운 공지사항을 알려드립니다</a><br>
     </div>
   </div>
   <div id="cs-3">
-    <a href="">
+    <img src="/img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
+    <a href="#">
       묻고 답하기 <br>
-      문의사항을 남기시면 친절히 답변드립니다.
+      <small>문의사항을 남기시면 친절히 답변드립니다.</small>
     </a>
   </div>
   <div id="cs-4">
-    <a href="">
+    <img src="/img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
+    <a href="#">
       채용안내 <br>
-      당사와 함께할 수 있는 인재를 모집합니다.
+      <small>당사와 함께할 수 있는 인재를 모집합니다.</small>
     </a>
   </div>
   <div id="cs-5">
-    <a href="">
+    <img src="/img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
+    <a href="/company/company03.html">
       오시는 길<br>
-      당사의 약도 및 연락처를 보실 수 있습니다.
+      <small>당사의 약도 및 연락처를 보실 수 있습니다.</small>
     </a>
   </div>
 </div>
