--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
 <!-- footer -->
 <div class="footer">
+  <div id="ft1">
     <a href="">회사소개</a>
     <a href="">개인정보보호정책</a>
     <a href="">이메일무단수집거부</a>
@@ -11,4 +12,11 @@
     고객지원:010-2709-0828,FAX:070-777-5555,EMAIL:fivestone55@daum.net,사업자등록번호:780-42-00047,통신판매업<br>
     제 2015-경기-00974호
     COPYRIGHT 2020 FIVESTONE, ALL RIGHT RESERVED.</p>
+  </div>
+  <div dir="ftic">
+    <img src="/img/mf-icon01.png" alt="">
+    <img src="/img/mf-icon02.png" alt="">
+    <img src="/img/mf-icon03.png" alt="">
+    <img src="/img/mf-icon04.png" alt="">
+  </div>
 </div>
