--- a/main.html
+++ b/main.html
@@ -74,27 +74,17 @@
 </div>
 <!-- 섹션5 -->
 <div id="section5">
-  
   <div id="section5-1">
-    <div class="carousel-item">
-      <img src="/img/visual04.jpg" alt="">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>정직과 신뢰, 디자인</h5>
-        <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
-        <button type="button" class="btn btn-outline-secondary" class="absol">Lean more</button>
-      </div>
-    </div>
-
-    <!-- <img src="img/visual04.jpg" alt="">
+  <img src="img/visual04.jpg" alt="">
   <h1>정직과 신뢰, 디자인</h1>
   <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
-  <button type="button" class="btn btn-outline-secondary" class="absol">Lean more</button> -->
+  <button type="button" id="learn">Learn more</button>
   </div>
 </div>
 <!-- 섹션6 -->
 <div id="section6">
   <h1>CS CENTER</h1>
-  <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께합니다</p>
+  <p style="margin-bottom: 40px;">파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께합니다</p>
   </div>
 
   <div id="cscenter">
