--- a/company/company01.html
+++ b/company/company01.html
@@ -111,7 +111,7 @@
 
     <div class="row" id="con">
       <div class="col">
-        <img src="/img/company/img0102.jpg" width="400px">
+        <img src="/img/company/img0102.jpg" width="100%">
       </div>
       <div class="col">
           <h5>파이브스톤은 끊임없는 열정으로<br>
