--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 <h1>THE SPECIAL DESIGN GROUP</h1>
 <p>파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 디자인 역량과 기술력에 집중하고<br>
 고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다.</p>
-<button type="button" class="btn btn-outline-secondary">Lean more</button>
+<button type="button" class="btn btn-outline-secondary" id="lmore">Lean more</button>
 </div>
 <!-- 섹션3 -->
 <div id="section3">
@@ -78,7 +78,7 @@
   <img src="img/visual04.jpg" alt="">
   <h1>정직과 신뢰, 디자인</h1>
   <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
-  <button type="button" id="learn">Learn more</button>
+  <button type="button" class="btn btn-outline-secondary" id="learn" >Learn more</button>
   </div>
 </div>
 <!-- 섹션6 -->
