--- a/company/company01.html
+++ b/company/company01.html
@@ -176,6 +176,7 @@
   <div class="container">
     <p class="title">HISTORY</p>
     <div class="sts3"><p>설립이후 파이브스톤이 걸어온 길을 알립니다.</p></div>
+    <div id="histo">
     <div class="hist">
       <h4>2017</h4>
       <p class="hist2">10 정직과 신뢰의 기업 파이브스톤</p>
@@ -188,11 +189,12 @@
       <p class="hist2">06 홈페이지 구축을 위한 최고의 선택 파이브스톤</p>
       <p class="hist2">05 함께 할 수 있는 좋은 친구 파이브스톤</p>
     </div>
-    <div class="hist" style="border-top: 1px dotted #999999;">
+    <div class="hist" style="border-top: 1px dotted #999999; margin-bottom: 80px;">
       <h4>2015</h4>
       <p class="hist2">10 정직과 신뢰의 기업 파이브스톤</p>
       <p class="hist2">06 홈페이지 구축을 위한 최고의 선택 파이브스톤</p>
       <p class="hist2">05 함께 할 수 있는 좋은 친구 파이브스톤</p>
+    </div>
     </div>
 
   </div>
