--- a/customer/customer03.html
+++ b/customer/customer03.html
@@ -120,17 +120,18 @@
           </tr>
         </tbody>
       </table>
+      <button type="button" id="write" style="border: none;"><img src="/img/customer/write.gif"></button>
     </div>
 
 
     <div id="srcbar">
-      <select name="search">
+      <select name="search" class="srh">
         <option value="1">질문</option>
         <option value="2">답변</option>
         <option value="3">작성자</option>
       </select>
       <input type="text" name="src" id="src">
-      <button><img src="/img/customer/search.gif"></button>
+      <button class="cussrh"><img src="/img/customer/search.gif"></button>
     </div>  
   </div>  
   <!-- 푸터 -->
