--- a/customer/customer02.html
+++ b/customer/customer02.html
@@ -138,18 +138,18 @@
           </tr>
         </tbody>
       </table>
-      <button type="button" style="border: none;"><img src="/img/customer/write.gif"></button>
+      <button type="button" id="write" style="border: none;"><img src="/img/customer/write.gif"></button>
     </div>
 
 
     <div id="srcbar">
-      <select name="search">
+      <select name="search" class="srh">
         <option value="1">제목</option>
         <option value="2">내용</option>
         <option value="3">작성자</option>
       </select>
       <input type="text" name="src" id="src">
-      <button><img src="/img/customer/search.gif"></button>
+      <button class="cussrh"><img src="/img/customer/search.gif"></button>
     </div>  
   </div>  
   <!-- search bar -->
