--- a/product/product01.html
+++ b/product/product01.html
@@ -95,21 +95,27 @@
       <p class="title">제품안내01</p>
       <p id="eng">The design and maintenance are excellent.</p>
     </div>
-    <div class="row" style="text-align: center; margin-top: 40px;">
-      <div class="col"><img src="/img/product/1.jpg" alt="1" width="200px" height="200px">FS108</div>
-      <div class="col"><img src="/img/product/2.jpg" alt="1" width="200px" height="200px">FS107</div>
-      <div class="col"><img src="/img/product/3.jpg" alt="1" width="200px" height="200px">FS106</div>
-      <div class="col"><img src="/img/product/4.jpg" alt="1" width="200px" height="200px">FS105</div>
-    </div>
-    <div class="row" style="text-align: center;">
-      <div class="col"><img src="/img/product/5.jpg" alt="1" width="200px" height="200px">FS104</div>
-      <div class="col"><img src="/img/product/6.jpg" alt="1" width="200px" height="200px">FS103</div>
-      <div class="col"><img src="/img/product/7.jpg" alt="1" width="200px" height="200px">FS102</div>
-      <div class="col"><img src="/img/product/8.jpg" alt="1" width="200px" height="200px">FS101</div>
+    <div id="product2">
+      <div class="prd1"><img src="/img/product/1.jpg" alt="1"><br>FS108</div>
+      <div class="prd1"><img src="/img/product/2.jpg" alt="1"><br>FS107</div>
+      <div class="prd1"><img src="/img/product/3.jpg" alt="1"><br>FS106</div>
+      <div class="prd1"><img src="/img/product/4.jpg" alt="1"><br>FS105</div>
+      <div class="prd1"><img src="/img/product/5.jpg" alt="1"><br>FS104</div>
+      <div class="prd1"><img src="/img/product/6.jpg" alt="1"><br>FS103</div>
+      <div class="prd1"><img src="/img/product/7.jpg" alt="1"><br>FS102</div>
+      <div class="prd1"><img src="/img/product/8.jpg" alt="1"><br>FS101</div>
     </div>
   </div>
   <!-- search bar -->
-  
+  <div id="srcbar">
+    <select name="search" class="srh">
+      <option value="1">제목</option>
+      <option value="2">내용</option>
+      <option value="3">작성자</option>
+    </select>
+    <input type="text" name="src" id="src">
+    <button class="cussrh"><img src="/img/customer/search.gif"></button>
+  </div>
 
   <!-- 푸터 -->
   <div id="footer"></div>
