--- a/community/community01.html
+++ b/community/community01.html
@@ -136,13 +136,13 @@
 
 
     <div id="srcbar">
-      <select name="search">
+      <select name="search" class="srh">
         <option value="1">제목</option>
         <option value="2">내용</option>
         <option value="3">작성자</option>
       </select>
       <input type="text" name="src" id="src">
-      <button><img src="/img/customer/search.gif"></button>
+      <button class="cussrh"><img src="/img/customer/search.gif"></button>
     </div>  
   </div>  
 
