--- a/main.html
+++ b/main.html
@@ -33,9 +33,12 @@
   <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
   <div id="section3-1">
     <img src="img/m-op01.jpg" alt="">
-    <h1 class="overlay">DFSA 101</h1>
-    <button type="button" class="btn btn-outline-secondary" id="view" >VIEW</button>
+      <h1 class="overlay">DFSA 101</h1>
+      <button type="button" class="btn btn-outline-secondary" id="view" >VIEW</button>
+    </div>
+
   </div>
+  
 </div>
 <!-- 섹션4 -->
 <div id="section4">
