--- a/member/login.html
+++ b/member/login.html
@@ -50,20 +50,26 @@
 
   <!-- 로그인 -->
   <div class="login1">
-    <strong>로그인</strong>
+    <p>로그인</p>
     <p>The design and maintenance are excellent.</p>
   </div>
 
   <form>
     <div class="form">
     <div class="form-group1">
-      <input type="email" class="email" placeholder="아이디"><br>
-      <input type="password" class="password" placeholder="비밀번호">
+      <div id="idpw">
+      <p class="idpw">아이디 <input type="email" class="email"></p>
+      <p class="idpw">비밀번호<input type="password" class="password"></p>
+      </div>
+      <div id="submit">
+      <button type="submit" class="submit"><img src="/img/member/btn_login.gif" alt=""></button>
+      </div>
     </div>
-      <button type="submit" class="submit">로그인</button>
+    <div class="form-group2">
       <div class="login2">
-      <p>-아이디를 잊으셨나요?</p><a href="">아이디찾기</a>
-      <p>-비밀번호를 잊으셨나요?</p><a href="">비밀번호찾기</a>
+      <p>-아이디를 잊으셨나요?<a href=""><img src="/img/member/btn_id_find.gif" alt=""></a></p>
+      <p>-비밀번호를 잊으셨나요?<a href=""><img src="/img/member/btn_pw_find.gif" alt=""></a></p>
+    </div>
     </div>
   </div>
   </form>
