--- a/member/login.html
+++ b/member/login.html
@@ -23,6 +23,18 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
+    window.onload = function(){
+      var submit = document.getElementsByClassName('submit');
+      var id = document.getElementsByClassName('email');
+      var pw = document.getElementsByClassName('password');
+      submit.onclick = function(){
+        if(id.length < 4 || isEmpty(id)){
+          alert("아이디를 정확히 입력하세요 (4글자 이상)");
+          return false;
+        }
+        return true;
+      }
+    }
   </script>
 
 </head>
