--- a/member/join.html
+++ b/member/join.html
@@ -60,10 +60,12 @@
   </div>
   <div id="join3">
     <div id="join4">
-    <input type="text" class="name" placeholder="이름" ><br>
-    <input type="email" class="name" placeholder="이메일" >
-  </div>
-    <button>확인</button>
+      <img src="/img/member/img_name.gif" alt=""><input type="text" class="name"><br>
+      <img src="/img/member/img_email.gif" alt=""><input type="email" class="name">
+    </div>  
+    <div id="submit">
+      <img src="/img/member/btn_confirm01.gif" alt="">
+    </div>
   </div>
 
 
