--- a/member/idFind.html
+++ b/member/idFind.html
@@ -16,7 +16,25 @@
 
 </head>
 <body>
-  
+  <div id="idfind">
+    <div id="idfind1">
+      <p>아이디 찾기</p>
+    </div>
+    <div id="idfind2">
+      <p>아이디를 잊어버리셨나요?<br>
+         회원님의 성명과 이메일을 입력하여 주세요.</p>
+    </div>
+    <div id="idfind3">
+        <img src="/img/member/txt_join1.gif" alt=""><input type="text" class="txtml"><br>
+        <img src="/img/member/txt_join3.gif" alt=""><input type="email" class="txtml"><br>
+    </div>
+    <div id="idfind4">
+      <img src="" alt="">
+    </div>
+    <div id="idfind5">
+      <img src="/img/member/btn_close.gif" alt="">
+    </div>
+  </div>
     
 </body>
 </html>
