--- a/customer/customer02.html
+++ b/customer/customer02.html
@@ -23,6 +23,12 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
+    function searchbutton () {
+      alert ("검색어를 정확히 입력하세요.")
+    }
+    function writebutton () {
+      window.open ("customer02_2.html","글쓰기창" )
+    }
   </script>
 
 </head>
@@ -138,7 +144,7 @@
           </tr>
         </tbody>
       </table>
-      <button type="button" id="write" style="border: none;"><img src="/img/customer/write.gif"></button>
+      <button type="button" id="write" style="border: none;"><img src="/img/customer/write.gif" onclick="writebutton()"></button>
     </div>
 
 
@@ -149,7 +155,7 @@
         <option value="3">작성자</option>
       </select>
       <input type="text" name="src" id="src">
-      <button class="cussrh"><img src="/img/customer/search.gif"></button>
+      <button class="cussrh" onclick="searchbutton()"><img src="/img/customer/search.gif"></button>
     </div>  
   </div>  
   <!-- search bar -->
