--- a/customer/customer02_2.html
+++ b/customer/customer02_2.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/customer/write.css">
+  <link rel="stylesheet" href="/css/customer/customer02.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -90,8 +91,35 @@
   </nav>
 
   <!-- 묻고답하기 - 글쓰기 -->
-  
-
+  <div class="container">
+    <div class="col">
+      <p class="title">묻고답하기</p>
+      <p id="eng">The design and maintenance are excellent.</p>
+    </div>
+    <div id="listtb">
+      <table class="table">
+        <tbody>
+          <tr>
+            <td class="title3">제목</td>
+            <td class="sent"><input type="text" class="textform"> </td>
+          </tr>
+          <tr>
+            <td class="title3">작성자</td>
+            <td class="sent"><input type="text" class="textform"> </td>
+          </tr>
+          <tr>
+            <td class="title3">비밀번호</td>
+            <td class="sent" style="border-bottom: 1px solid #dddddd;"><input type="text" class="textform"> </td>
+          </tr>
+        </tbody>
+      </table>
+      <textarea name="txt" id="txt" cols="70" rows="10"></textarea>
+    </div>
+    <div id="but">
+      <button type="button" style="border: none;"><img src="/img/customer/btn_confirm.gif" alt=""></button>
+      <button type="button"  style="border: none;"><img src="/img/customer/btn_cancel.gif" alt=""></button>
+    </div>
+  </div>
 
   <!-- 푸터 -->
   <div id="footer"></div>
