--- a/member/login.html
+++ b/member/login.html
@@ -23,17 +23,17 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
-    window.onload = function(){
-      var submit = document.getElementsByClassName('submit');
-      var id = document.getElementsByClassName('email');
-      var pw = document.getElementsByClassName('password');
-      submit.onclick = function(){
+
+      function submitbutton(){
         if(id.length < 4 || isEmpty(id)){
           alert("아이디를 정확히 입력하세요 (4글자 이상)");
-          return false;
         }
-        return true;
       }
+    function idfind() {
+    window.open ("idFind.html","아이디 찾기","width=400, height=320")
+    }
+    function pwfind() {
+    window.open ("passwordFind.html","비밀번호 찾기","width=400, height=320")
     }
   </script>
 
@@ -74,13 +74,13 @@
       <p class="idpw">비밀번호<input type="password" class="password"></p>
       </div>
       <div id="submit">
-      <button type="submit" class="submit"><img src="/img/member/btn_login.gif" alt=""></button>
+      <button type="submit" class="submit"><img src="/img/member/btn_login.gif" onclick="submitbutton()"></button>
       </div>
     </div>
     <div class="form-group2">
       <div class="login2">
-      <p>-아이디를 잊으셨나요?<a href=""><img src="/img/member/btn_id_find.gif" alt=""></a></p>
-      <p>-비밀번호를 잊으셨나요?<a href=""><img src="/img/member/btn_pw_find.gif" alt=""></a></p>
+      <p>-아이디를 잊으셨나요?<a href=""><img src="/img/member/btn_id_find.gif" onclick="idfind()"></a></p>
+      <p>-비밀번호를 잊으셨나요?<a href=""><img src="/img/member/btn_pw_find.gif" onclick="pwfind()"></a></p>
     </div>
     </div>
   </div>
