--- a/member/passwordFind.html
+++ b/member/passwordFind.html
@@ -16,6 +16,25 @@
 
 </head>
 <body>
-  
+  <div id="pwfind">
+    <div id="pwfind1">
+      <p>비밀번호 찾기</p>
+    </div>
+    <div id="pwfind2">
+      <p>비밀번호를 잊어버리셨나요?<br>
+         회원님의 성명과 이메일을 입력하여 주세요.</p>
+    </div>
+    <div id="pwfind3">
+        <img src="/img/member/txt_join1.gif" alt=""><input type="text" class="txtml"><br>
+        <img src="/img/member/txt_login_01.gif" alt="" style="margin-right: 10px;"><input type="text" class="txtml"><br>
+        <img src="/img/member/txt_join3.gif" alt=""><input type="email" class="txtml"><br>
+    </div>
+    <div id="pwfind4">
+      <img src="" alt="">
+    </div>
+    <div id="pwfind5">
+      <img src="/img/member/btn_close.gif" alt="">
+    </div>
+  </div>
 </body>
 </html>
