--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 <h1>THE SPECIAL DESIGN GROUP</h1>
 <p>파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 디자인 역량과 기술력에 집중하고<br>
 고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다.</p>
-<button type="button" class="btn btn-outline-secondary" id="lmore">Lean more</button>
+<a href="/company/company01.html" type="button" class="btn btn-outline-secondary" id="lmore">Lean more</a>
 </div>
 <!-- 섹션3 -->
 <div id="section3">
@@ -34,7 +34,7 @@
   <div id="section3-1">
     <img src="img/m-op01.jpg" alt="">
       <h1 class="overlay">DFSA 101</h1>
-      <button type="button" class="btn btn-outline-secondary" id="view" >VIEW</button>
+      <a href="company01.html" type="button" class="btn btn-outline-secondary" id="view">VIEW</a>
     </div>
 
   </div>
@@ -107,24 +107,24 @@
     </div>
   </div>
   <div id="cs-3">
-    <img src="/img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
     <a href="#">
-      묻고 답하기 <br>
-      <small>문의사항을 남기시면 친절히 답변드립니다.</small>
+      <img src="/img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
+      <h6>묻고 답하기</h6>
+      <p>문의사항을 남기시면 친절히 답변드립니다.</p>
     </a>
   </div>
   <div id="cs-4">
-    <img src="/img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
     <a href="#">
-      채용안내 <br>
-      <small>당사와 함께할 수 있는 인재를 모집합니다.</small>
+      <img src="/img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
+      <h6>채용안내</h6>
+      <p>당사와 함께할 수 있는 인재를 모집합니다.</p>
     </a>
   </div>
   <div id="cs-5">
-    <img src="/img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
     <a href="/company/company03.html">
-      오시는 길<br>
-      <small>당사의 약도 및 연락처를 보실 수 있습니다.</small>
+      <img src="/img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
+      <h6>오시는 길</h6>
+      <p>당사의 약도 및 연락처를 보실 수 있습니다.</p>
     </a>
   </div>
 </div>
