--- a/member/join.html
+++ b/member/join.html
@@ -64,7 +64,7 @@
       <img src="/img/member/img_email.gif" alt=""><input type="email" class="name">
     </div>  
     <div id="submit">
-      <img src="/img/member/btn_confirm01.gif" alt="">
+      <a href="join2.html"><img src="/img/member/btn_confirm01.gif" alt=""></a>
     </div>
   </div>
 
