--- a/member/join2.html
+++ b/member/join2.html
@@ -50,7 +50,75 @@
 
   <!-- 메인 -->
   <!-- 회원가입 -->
-  
+  <div class="container">
+    <div class="col">
+      <p class="title">회원가입</p>
+      <p id="eng">The design and maintenance are excellent.</p>
+    </div>
+    <div id="join2">
+      <p>OOO사이트에 오신 것을 환영합니다.</p>
+      <p>-이름과 이메일을 입력해 주시면 가입여부를 확인 후 회원가입 절차가 이루어집니다.</p>
+    </div>
+    <div class="jointxt">
+      이용약관
+      <textarea name="jointxt" id="jointxt">
+        [제1장 총칙]
+        
+        제1조(목적)
+
+        이 약관은 *****가(이) 운영하는 인터넷 사이트(www.*****)의 회원가입과 서비스 이용에 대한 이용자의 권리, 의무와 책임사항을 규정함을 목적으로 합니다. 
+
+
+        제2조(정의)
+
+        ① '****'이란 회사가 재화나 용역을 이용자에게 제공하기 위하여 컴퓨터 등 정보통신 설비를 이용하여 재화 또는 용역을 거래할 수 있도록 설정한 가상의 영업장과 사이트를 운영하는 사업자의 의미로도 사용합니다.   
+        ② '이용자'란 '****'에 접속하거나 방문하여 이 약관에 따라 '****'가 제공하는 서비스를 받는 회원과 비회원을 말합니다.   
+        ③ '회원'이라 함은 '****'에 개인정보를 제공하여 회원등록을 한 자로서, '****'의 정보를 지속적으로 제공받으며, '****'이 제공하는 서비스를 계속적으로 이용할 수 있는 자를 말합니다.   
+        ④ '비회원'이라 함은 회원에 가입하지 않고 '****'이 제공하는 서비스를 이용하는 자를 말합니다  
+
+
+        제3조 (약관의 명시와 개정)
+      </textarea><br>
+      <input type="checkbox" name="ck" id="ckbox">위 약관에 동의합니다.
+    </div>
+    <div class="jointxt">
+      개인정보보호정책
+      <textarea name="jointxt" id="jointxt">
+        ::: 개인정보취급방침 ::::
+
+
+        OOOOO(이하 '회사'라 합니다.)은 회원의 사생활 및 개인정보를 적극적으로 보호하여 정보화 사회에서의 통신의 자유를 보장하고자 아래와 같이 개인정보취급방침을 명시하여 실천하고 있습니다.
+
+        회사의 개인정보취급방침은 관련 법률 및 정부 지침의 변경과 회사의 내부 정책 변화에 따라 변경될 수 있으며, 수시로 방문하셔서 그 내용을 확인하여 주시기 바랍니다.
+
+        1. 개인정보의 수집 방법 및 범위
+        회사는 서비스의 이용을 위하여 회원 가입 시에 회원 정보를 기입하도록 합니다. 회원가입 시에 받는 기본 필수 정보에는 성명, 주민등록번호, 사업자등록번호, 성별, 주소, 핸드폰번호, 전자우편 주소, 연락처가 있습니다. 이외에 보다 나은 서비스를 위해 선택 정보인 직업, 취미, 월소득 등을 수집할 수 있습니다.
+      </textarea><br>
+      <input type="checkbox" name="ck" id="ckbox">위 개인정보취급방침에 동의합니다.
+    </div>
+    <div class="jointxt">
+      개인정보의 수집 및 이용목적
+      <textarea name="jointxt" id="jointxt">
+        ▶ 개인정보의 수집 및 이용목적
+        - 서비스 이용에 따른 본인식별, 실명확인, 가입의사 확인, 연령제한 서비스 이용
+        - 고지사항 전달, 불만처리 의사소통 경로 확보, 물품배송 시 정확한 배송지 정보 확보
+        - 신규 서비스 등 최신정보 안내 및 개인맞춤서비스 제공을 위한 자료
+        - 기타 원활한 양질의 서비스 제공 등
+
+        ▶ 수집하는 개인정보의 항목
+        - 이름, 이메일, 주민등록번호, 주소, 연락처, 핸드폰번호, 그 외 선택항목
+
+        ▶ 개인정보의 보유 및 이용기간
+        - 원칙적으로 개인정보의 수집 또는 제공받은 목적 달성 시 지체 없이 파기합니다.
+        - 다만, 원활한 서비스의 상담을 위해 상담 완료 후 내용을 3개월간 보유할 수 있으며
+           전자상거래에서의 소비자보호에 관한 법률 등 타법률에 의해 보존할 필요가 있는 경우에는 일정기간 보존합니다.
+      </textarea><br>
+      <input type="checkbox" name="ck" id="ckbox">위 개인정보의 수집 및 이용목적에 동의합니다.
+    </div>
+    <div id="btnjoin">
+      <a href="#"><img src="/img/member/btn_join.gif" alt=""></a>
+    </div>
+  </div>  
 
 
 
