--- a/main.html
+++ b/main.html
@@ -28,19 +28,94 @@
 <a href="/company/company01.html" type="button" class="btn btn-outline-secondary" id="lmore">Lean more</a>
 </div>
 <!-- 섹션3 -->
-<div id="section3">
+<!-- <div id="container">
+<div id="section3"> -->
+  <div class="proMain">
+  <div class="container">
+  <div class="row">
+  <div class="proSection1 col-12">  
   <h1>PRODUCT</h1>
   <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
-  <div id="section3-1">
-    <img src="img/m-op01.jpg" alt="">
+  <div class="row">
+    <div class="proSection2">
+      <div class="contents1 con1 ">
+        <a href="#">
+          <img src="/img/m-op01.jpg">
+          <div class="overlay">
+            <div class="con2">
+              <p>DFSA 101</p>
+              <button>VIEW</button>
+            </div>
+          </div>
+        </a>
+      </div>
+  <div class="proSection3 ">
+    <div class="contents2 con1">
+      <a href="#">
+        <img src="/img/m-op02.jpg">
+        <div class="overlay">
+          <div class="con2">
+            <p>DFSA 102</p>
+            <button>VIEW</button>
+          </div>
+        </div>
+      </a>  
+    </div>
+    <div class="contents3 con1">
+      <a href="#">
+        <img src="/img/m-op03.jpg">
+        <div class="overlay">
+          <div class="con2">
+            <p>DFSA 103</p>
+            <button>VIEW</button>
+          </div>
+        </div>
+      </a>  
+    </div>
+    <div class="contents4 con1">
+      <a href="#">
+        <img src="/img/m-op04.jpg">
+        <div class="overlay">
+          <div class="con2">
+            <p>DFSA 104</p>
+            <button>VIEW</button>
+          </div>
+        </div>
+      </a>  
+    </div>
+    <div class="contents5 con1">
+      <a href="#">
+        <img src="/img/m-op05.jpg">
+        <div class="overlay">
+          <div class="con2">
+            <p>DFSA 105</p>
+            <button>VIEW</button>
+          </div>
+        </div>
+      </a>  
+    </div>
+  <!-- <div id="section3-1" class="row">
+    <div class="col-6" id="secleft">
+      <img src="img/m-op01.jpg" alt="">
       <h1 class="overlay">DFSA 101</h1>
       <a href="company01.html" type="button" class="btn btn-outline-secondary" id="view">VIEW</a>
     </div>
-
-  </div>
+    <div class="col-6 row">
+      <img src="img/m-op01.jpg" alt="">
+      <h1 class="overlay">DFSA 101</h1>
+      <a href="company01.html" type="button" class="btn btn-outline-secondary" id="view">VIEW</a>
+      <img src="img/m-op01.jpg" alt="">
+      <h1 class="overlay">DFSA 101</h1>
+      <a href="company01.html" type="button" class="btn btn-outline-secondary" id="view">VIEW</a>
+    </div>
+  </div> -->
+</div>
+</div>
   
 </div>
+
 <!-- 섹션4 -->
+<div id="container">
 <div id="section4">
   <h1>BUSINESS</h1>
   <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
@@ -79,6 +154,8 @@
   </div>
   </div>
 </div>
+</div>
+
 <!-- 섹션5 -->
 <div id="section5">
   <div id="section5-1">
@@ -107,7 +184,7 @@
     </div>
   </div>
   <div id="cs-3">
-    <a href="#">
+    <a href="customer/customer02.html">
       <img src="/img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>묻고 답하기</h6>
       <p>문의사항을 남기시면 친절히 답변드립니다.</p>
