--- a/member/login.html
+++ b/member/login.html
@@ -93,8 +93,8 @@
     <div class="form">
     <div class="form-group1">
       <div id="idpw">
-      <p class="idpw">아이디 <input type="text" class="email"></p>
-      <p class="idpw">비밀번호<input type="password" class="password"></p>
+      <p class="idpw">아이디 <input type="text" class="email" style="margin-left: 18px;"></p>
+      <p class="idpw">비밀번호<input type="password" class="password"  style="margin-left: 9px;"></p>
       </div>
       <div id="submit">
       <button type="button" class="submit"><img src="/img/member/btn_login.gif" onclick="submitbutton()"></button> 
