--- a/main.html
+++ b/main.html
@@ -30,92 +30,79 @@
 <!-- 섹션3 -->
 <!-- <div id="container">
 <div id="section3"> -->
-  <div class="proMain">
+<div class="proMain">
   <div class="container">
-  <div class="row">
-  <div class="proSection1 col-12">  
-  <h1>PRODUCT</h1>
-  <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
-  <div class="row">
-    <div class="proSection2">
-      <div class="contents1 con1 ">
-        <a href="#">
-          <img src="/img/m-op01.jpg">
-          <div class="overlay">
-            <div class="con2">
-              <p>DFSA 101</p>
-              <button>VIEW</button>
-            </div>
-          </div>
-        </a>
+    <div class="row">
+      <div class="proSection1 col-12">
+        <h3>PRODUCT</h3>
+        <span>우리회사는 정직과 신뢰, 디자인으로 고객과 함께 합니다.</span>
       </div>
-  <div class="proSection3 ">
-    <div class="contents2 con1">
-      <a href="#">
-        <img src="/img/m-op02.jpg">
-        <div class="overlay">
-          <div class="con2">
-            <p>DFSA 102</p>
-            <button>VIEW</button>
+    </div>
+    <div class="row">
+      <div class="proSection2">
+        <div class="contents1 con1 ">
+          <a href="#">
+            <img src="/img/m-op01.jpg">
+            <div class="overlay">
+              <div class="con2">
+                <p>DFSA 101</p>
+                <button>VIEW</button>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="proSection3 ">
+          <div class="contents2 con1">
+            <a href="#">
+              <img src="/img/m-op02.jpg">
+              <div class="overlay">
+                <div class="con2">
+                  <p>DFSA 102</p>
+                  <button>VIEW</button>
+                </div>
+              </div>
+            </a>  
+          </div>
+          <div class="contents3 con1">
+            <a href="#">
+              <img src="/img/m-op03.jpg">
+              <div class="overlay">
+                <div class="con2">
+                  <p>DFSA 103</p>
+                  <button>VIEW</button>
+                </div>
+              </div>
+            </a>  
+          </div>
+          <div class="contents4 con1">
+            <a href="#">
+              <img src="/img/m-op04.jpg">
+              <div class="overlay">
+                <div class="con2">
+                  <p>DFSA 104</p>
+                  <button>VIEW</button>
+                </div>
+              </div>
+            </a>  
+          </div>
+          <div class="contents5 con1">
+            <a href="#">
+              <img src="/img/m-op05.jpg">
+              <div class="overlay">
+                <div class="con2">
+                  <p>DFSA 105</p>
+                  <button>VIEW</button>
+                </div>
+              </div>
+            </a>  
           </div>
         </div>
-      </a>  
+      </div>
     </div>
-    <div class="contents3 con1">
-      <a href="#">
-        <img src="/img/m-op03.jpg">
-        <div class="overlay">
-          <div class="con2">
-            <p>DFSA 103</p>
-            <button>VIEW</button>
-          </div>
-        </div>
-      </a>  
-    </div>
-    <div class="contents4 con1">
-      <a href="#">
-        <img src="/img/m-op04.jpg">
-        <div class="overlay">
-          <div class="con2">
-            <p>DFSA 104</p>
-            <button>VIEW</button>
-          </div>
-        </div>
-      </a>  
-    </div>
-    <div class="contents5 con1">
-      <a href="#">
-        <img src="/img/m-op05.jpg">
-        <div class="overlay">
-          <div class="con2">
-            <p>DFSA 105</p>
-            <button>VIEW</button>
-          </div>
-        </div>
-      </a>  
-    </div>
-  <!-- <div id="section3-1" class="row">
-    <div class="col-6" id="secleft">
-      <img src="img/m-op01.jpg" alt="">
-      <h1 class="overlay">DFSA 101</h1>
-      <a href="company01.html" type="button" class="btn btn-outline-secondary" id="view">VIEW</a>
-    </div>
-    <div class="col-6 row">
-      <img src="img/m-op01.jpg" alt="">
-      <h1 class="overlay">DFSA 101</h1>
-      <a href="company01.html" type="button" class="btn btn-outline-secondary" id="view">VIEW</a>
-      <img src="img/m-op01.jpg" alt="">
-      <h1 class="overlay">DFSA 101</h1>
-      <a href="company01.html" type="button" class="btn btn-outline-secondary" id="view">VIEW</a>
-    </div>
-  </div> -->
+  </div>
 </div>
-</div>
-  
-</div>
-
 <!-- 섹션4 -->
-<div id="container">
+<div class="container col">
 <div id="section4">
   <h1>BUSINESS</h1>
   <p>파이브스톤은 정직과 신뢰, 디자인으로 고객과 함께 합니다.</p>
@@ -153,7 +140,6 @@
       보다 큰 감동을 드립니다</p>
   </div>
   </div>
-</div>
 </div>
 
 <!-- 섹션5 -->
