--- a/member/join.html
+++ b/member/join.html
@@ -54,11 +54,12 @@
     <p>회원가입</p>
     <p>The design and maintenance are excellent.</p>
   </div>
-  <div id="join2">
+  <div id="join2" style="margin: 25px;">
     <p>OOO사이트에 오신 것을 환영합니다.</p>
     <p>-이름과 이메일을 입력해 주시면 가입여부를 확인 후 회원가입 절차가 이루어집니다.</p>
   </div>
-  <div id="join3">
+  <div class="form">
+    <div id="join3">
     <div id="join4">
       <img src="/img/member/img_name.gif" alt=""><input type="text" class="name"><br>
       <img src="/img/member/img_email.gif" alt=""><input type="email" class="name">
@@ -67,8 +68,9 @@
       <a href="join2.html"><img src="/img/member/btn_confirm01.gif" alt=""></a>
     </div>
   </div>
+  </div>
 
-
+ 
   <!-- 푸터 -->
   <div id="footer"></div>
 
