--- a/member/join.html
+++ b/member/join.html
@@ -54,7 +54,7 @@
     <p>회원가입</p>
     <p>The design and maintenance are excellent.</p>
   </div>
-  <div id="join2" style="margin: 25px;">
+  <div id="join2">
     <p>OOO사이트에 오신 것을 환영합니다.</p>
     <p>-이름과 이메일을 입력해 주시면 가입여부를 확인 후 회원가입 절차가 이루어집니다.</p>
   </div>
