--- a/main.html
+++ b/main.html
@@ -110,7 +110,9 @@
 <div id="section4flex">
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
+    <div class="section4-3">
     <a href=""> <img src="img/m-mb01.jpg" alt=""></a>
+    </div>
     <p class="busititle">사업분야01</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
     보다 큰 감동을 드립니다.</p>
@@ -118,7 +120,8 @@
 </div>
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
-    <a href=""> <img src="img/m-mb02.jpg" alt=""></a>
+    <div class="section4-3">
+    <a href=""> <img src="img/m-mb02.jpg" alt=""></a></div>
     <p class="busititle">사업분야02</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
@@ -126,7 +129,8 @@
 </div>
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
-    <a href=""> <img src="img/m-mb03.jpg" alt=""></a>
+    <div class="section4-3">
+    <a href=""> <img src="img/m-mb03.jpg" alt=""></a></div>
     <p class="busititle">사업분야03</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
@@ -134,7 +138,8 @@
 </div>
 <div class="section4-1">
   <div class="section4-2">
-    <a href=""> <img src="img/m-mb04.jpg" alt=""></a>
+    <div class="section4-3">
+    <a href=""> <img src="img/m-mb04.jpg" alt=""></a></div>
     <p class="busititle">사업분야04</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
