--- a/customer/customer03.html
+++ b/customer/customer03.html
@@ -26,6 +26,9 @@
     function searchbutton () {
       alert ("검색어를 정확히 입력하세요.")
     }
+    function writebutton () {
+      window.open ("customer03_1.html","글쓰기창" )
+    }
     
   </script>
 
@@ -104,27 +107,27 @@
         <tbody>
           <tr>
             <td class="title2">질문</td>
-            <td class="sent">자주하는 질문모음입니다.</td>
+            <td class="sent"><a href="" class="tdtitle">자주하는 질문모음입니다.</a></td>
           </tr>
           <tr>
             <td class="title2">질문</td>
-            <td class="sent">자주하는 질문모음입니다.</td>
+            <td class="sent"><a href="" class="tdtitle">자주하는 질문모음입니다.</a></td>
           </tr>
           <tr>
             <td class="title2">질문</td>
-            <td class="sent">자주하는 질문모음입니다.</td>
+            <td class="sent"><a href="" class="tdtitle">자주하는 질문모음입니다.</a></td>
           </tr>
           <tr>
             <td class="title2">질문</td>
-            <td class="sent">자주하는 질문모음입니다.</td>
+            <td class="sent"><a href="" class="tdtitle">자주하는 질문모음입니다.</a></td>
           </tr>
           <tr>
             <td class="title2">질문</td>
-            <td class="sent">자주하는 질문모음입니다.</td>
+            <td class="sent"><a href="" class="tdtitle">자주하는 질문모음입니다.</a></td>
           </tr>
         </tbody>
       </table>
-      <button type="button" id="write" style="border: none;"><img src="/img/customer/write.gif"></button>
+      <button type="button" id="write" style="border: none;"><img src="/img/customer/write.gif" onclick="writebutton()"></button>
     </div>
 
 
