--- a/customer/customer03_1.html
+++ b/customer/customer03_1.html
@@ -90,7 +90,35 @@
   </nav>
 
   <!-- FAQ : 상세 -->
-  
+  <div class="container">
+    <div class="col">
+      <p class="title">FAQ</p>
+      <p id="eng">The design and maintenance are excellent.</p>
+    </div>
+    <div id="listtb">
+      <table class="table">
+        <tbody>
+          <tr>
+            <td class="title3">제목</td>
+            <td class="sent"><input type="text" class="textform"> </td>
+          </tr>
+          <tr>
+            <td class="title3">작성자</td>
+            <td class="sent"><input type="text" class="textform"> </td>
+          </tr>
+          <tr>
+            <td class="title3">비밀번호</td>
+            <td class="sent" style="border-bottom: 1px solid #dddddd;"><input type="text" class="textform"> </td>
+          </tr>
+        </tbody>
+      </table>
+      <textarea name="txt" id="txt" cols="70" rows="10"></textarea>
+    </div>
+    <div id="but">
+      <button type="button" style="border: none;"><img src="/img/customer/btn_confirm.gif" alt=""></button>
+      <button type="button"  style="border: none;"><img src="/img/customer/btn_cancel.gif" alt=""></button>
+    </div>
+  </div>
   
   <!-- 푸터 -->
   <div id="footer"></div>
