--- a/customer/customer02.html
+++ b/customer/customer02.html
@@ -114,31 +114,31 @@
         <tbody>
           <tr>
             <th scope="row">5</th>
-            <td>제목</td>
+            <td><a href="" class="tdtitle">제목</a></td>
             <td style="text-align: center;">작성자1</td>
             <td style="text-align: center;">2022-07-01</td>
           </tr>
           <tr>
             <th scope="row">4</th>
-            <td>ㅇㅅㅇ</td>
+            <td><a href="" class="tdtitle">ㅇㅅㅇ</a></td>
             <td style="text-align: center;">작성자2</td>
             <td style="text-align: center;">2022-07-01</td>
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>test</td>
+            <td><a href="" class="tdtitle">test</a></td>
             <td style="text-align: center;">the Bird</td>
             <td style="text-align: center;">2022-06-27</td>
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>test</td>
+            <td><a href="" class="tdtitle">test</a></td>
             <td style="text-align: center;">sss</td>
             <td style="text-align: center;">2022-06-22</td>
           </tr>
           <tr>
             <th scope="row">1</th>
-            <td>aaa</td>
+            <td><a href="" class="tdtitle">aaa</a></td>
             <td style="text-align: center;">sss</td>
             <td style="text-align: center;">2022-06-01</td>
           </tr>
