--- a/member/join2.html
+++ b/member/join2.html
@@ -116,7 +116,7 @@
       <input type="checkbox" name="ck" id="ckbox">위 개인정보의 수집 및 이용목적에 동의합니다.
     </div>
     <div id="btnjoin">
-      <a href="#"><img src="/img/member/btn_join.gif" alt=""></a>
+      <a href="/member/join3.html"><img src="/img/member/btn_join.gif" alt=""></a>
     </div>
   </div>  
 
