--- a/member/login.html
+++ b/member/login.html
@@ -38,7 +38,7 @@
       console.log(arrayID[0].value.length);
       console.log(isEmpty(arrayID[0].value));
       if(arrayID[0].value.length < 4 || isEmpty(arrayID[0].value)){
-        alert("아이디를 정확히 입력하세요 (4글자 이상 222)");
+        alert("아이디를 정확히 입력하세요 (4글자 이상)");
         return false;
       }
     }
