--- a/customer/customer03.html
+++ b/customer/customer03.html
@@ -27,7 +27,7 @@
       alert ("검색어를 정확히 입력하세요.")
     }
     function writebutton () {
-      window.open ("customer03_1.html","글쓰기창" )
+      window.open ("customer03_1.html","_self")
     }
     
   </script>
