--- a/member/join2.html
+++ b/member/join2.html
@@ -79,7 +79,7 @@
 
         제3조 (약관의 명시와 개정)
       </textarea><br>
-      <input type="checkbox" name="ck" id="ckbox">위 약관에 동의합니다.
+      <input type="checkbox" name="ck" class="check" id="ckbox">위 약관에 동의합니다.
     </div>
     <div class="jointxt">
       개인정보보호정책
@@ -94,7 +94,7 @@
         1. 개인정보의 수집 방법 및 범위
         회사는 서비스의 이용을 위하여 회원 가입 시에 회원 정보를 기입하도록 합니다. 회원가입 시에 받는 기본 필수 정보에는 성명, 주민등록번호, 사업자등록번호, 성별, 주소, 핸드폰번호, 전자우편 주소, 연락처가 있습니다. 이외에 보다 나은 서비스를 위해 선택 정보인 직업, 취미, 월소득 등을 수집할 수 있습니다.
       </textarea><br>
-      <input type="checkbox" name="ck" id="ckbox">위 개인정보취급방침에 동의합니다.
+      <input type="checkbox" name="ck" class="check" id="ckbox">위 개인정보취급방침에 동의합니다.
     </div>
     <div class="jointxt">
       개인정보의 수집 및 이용목적
@@ -113,10 +113,10 @@
         - 다만, 원활한 서비스의 상담을 위해 상담 완료 후 내용을 3개월간 보유할 수 있으며
            전자상거래에서의 소비자보호에 관한 법률 등 타법률에 의해 보존할 필요가 있는 경우에는 일정기간 보존합니다.
       </textarea><br>
-      <input type="checkbox" name="ck" id="ckbox">위 개인정보의 수집 및 이용목적에 동의합니다.
+      <input type="checkbox" name="ck" class="check" id="ckbox">위 개인정보의 수집 및 이용목적에 동의합니다.
     </div>
     <div id="btnjoin">
-      <a href="/member/join3.html"><img src="/img/member/btn_join.gif" alt=""></a>
+      <img src="/img/member/btn_join.gif" onclick="agree()">
     </div>
   </div>  
 
@@ -124,6 +124,24 @@
 
   <!-- 푸터 -->
   <div id="footer"></div>
-
+<script>
+  // 약관동의 3개 체크박스를 확인.
+  function agree() {
+      //다 동의 한것으로 설정.
+      let isAllCheck = true;
+      var checkboxArray = document.getElementsByClassName('check');
+      for( var cbx of checkboxArray ) {
+        if( cbx.checked == false ) {
+          isAllCheck = false;
+          break; //탈출
+        }
+      }
+      if( isAllCheck == true ) {
+        window.location.href = "./join3.html";
+      }else{
+        alert("이용약관에 모두 동의하셔야 회원으로 가입하실 수 있습니다.");
+      }
+    }
+</script>
 </body>
 </html>
