--- a/member/join3.html
+++ b/member/join3.html
@@ -50,7 +50,170 @@
 
   <!-- 메인 -->
   <!-- 회원가입 -->
+  <div class="container">
+    <div class="col">
+      <p class="title">회원가입</p>
+      <p id="eng">The design and maintenance are excellent.</p>
+    </div>
+    <div id="join2">
+      <p>OOO사이트에 오신 것을 환영합니다.</p>
+      <p>-이름과 이메일을 입력해 주시면 가입여부를 확인 후 회원가입 절차가 이루어집니다.</p>
+    </div>
+    <div id="joinbox">
+        <p>회원가입을 위해서 아래의 양식에 있는 내용을 입력해 주셔야 합니다.</p>
+        <p style="font-size: 14px; color: #555555;">-회원님의 개인정보를 신중하게 보호하고 있으며 회원님의 동의 없이는 기재하신 회원정보가 누출되지 않습니다. 자세한 내용은 개인정보보호정책에서 확인하세요.</p>
+    </div>
+ 
+    <div id="form">
+        <div id="listtb">
+          <table class="table">
+            <tbody>
+              <tr>
+                <td class="title3">아이디</td>
+                <td class="sent"><input type="text" class="textform"><img src="/img/member/btn_iddupl.gif" alt="">(영문 소문자, 숫자4~16자)</td>
+              </tr>
+              <tr>
+                <td class="title3">비밀번호</td>
+                <td class="sent"><input type="text" class="textform">영문/숫자/특수문자('~!@^*()-_+[]{}\:,.<>/) 조합으로 8~16자리. 첫글자는 영문자로 사용</td>
+              </tr>
+              <tr>
+                <td class="title3">비밀번호 확인</td>
+                <td class="sent"><input type="text" class="textform"> </td>
+              </tr>
+              <tr>
+                <td class="title3">이름</td>
+                <td class="sent"><input type="text" class="textform"> </td>
+              </tr>
+              <tr>
+                <td class="title3">이메일</td>
+                <td class="sent"><input type="text" class="textform">@<input type="text" class="textform" style="margin-left: 5px;"></td>
+              </tr>
+              <tr>
+                <td class="title3">이메일 수신여부</td>
+                <td class="sent"><input type="radio" style="margin:0 5px;"name="radiobutton">수신<input type="radio" style="margin:0 5px;"name="radiobutton">수신안함</td>
+              </tr>
+              <tr>
+                <td class="title3">비밀번호 확인시 질문</td>
+                <td class="sent">
+                    <select title="select" class="member_border" name="pw_question" style="width: 300px;">
+                        <option value="">========선택========</option>
+                        <option value="1">기억에 남는 추억의 장소는?</option>
+                        <option value="2">자신의 인생 좌우명은?</option>
+                        <option value="3">자신의 보물 제1호는?</option>
+                        <option value="4">가장 기억에 남는 선생님 성함은?</option>
+                        <option value="5">타인이 모르는 자신만의 신체비밀이 있다면?</option>
+                        <option value="6">추억하고 싶은 날짜가 있다면?</option>
+                        <option value="7">받았던 선물 중 기억에 남는 독특한 선물은?</option>
+                        <option value="8">유년시절 가장 생각나는 친구 이름은?</option>
+                        <option value="9">인상깊게 읽은 책 이름은?</option>
+                        <option value="10">읽은 책 중에서 좋아하는 구절이 있다면?</option>
+                        <option value="11">자신이 두 번째로 존경하는 인물은?</option>
+                        <option value="12">친구들에게 공개하지 않은 어릴적 별명이 있다면?</option>
+                        <option value="13">초등학교 때 기억에 남는 짝꿍 이름은?</option>
+                        <option value="14">다시 태어나면 되고 싶은 것은?</option>
+                        <option value="15">내가 좋아하는 캐릭터는?</option>
+                        <option value="16">나의 주민등록번호 끝자리는?</option>
+                    </select>
+                </td>
+              </tr>
+              <tr>
+                <td class="title3">비밀번호 확인시 답변</td>
+                <td class="sent"><input type="text" class="textform"> </td>
+              </tr>
+              <tr>
+                <td class="title3">성별</td>
+                <td class="sent"><input type="radio" style="margin:0 5px;" name="radiobutton2" >남자<input type="radio" style="margin:0 5px;" name="radiobutton2">여자</td>
+              </tr>
+              <tr>
+                <td class="title3">생년월일</td>
+                <td class="sent">
+                    <select title="select" name="birthdayY">
+                        <option value="">선택</option>
+                        <option value="1980">1980</option>
+                        <option value="1981">1981</option>
+                        <option value="1982">1982</option>
+                        <option value="1983">1983</option>
+                        <option value="1984">1984</option>
+                        <option value="1985">1985</option>
+                        <option value="1986">1986</option>
+                        <option value="1987">1987</option>
+                        <option value="1988">1988</option>
+                        <option value="1989">1989</option>
+                        <option value="1990">1990</option>
+                        <option value="1991">1991</option>
+                        <option value="1992">1992</option>
+                        <option value="1993">1993</option>
+                        <option value="1994">1994</option>
+                        <option value="1995">1995</option>
+                        <option value="1996">1996</option>
+                        <option value="1997">1997</option>
+                        <option value="1998">1998</option>
+                        <option value="1999">1999</option>
+                        <option value="2000">2000</option>
+                        <option value="2001">2001</option>
+                        <option value="2002">2002</option>
+                    </select>
+                    <select title="select" name="birthdayM">
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                        <option value="08">08</option>
+                        <option value="09">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                    </select>
+                    <select title="select" name="birthdayD">
+                        <option value="01">01</option>
+                        <option value="02">02</option>
+                        <option value="03">03</option>
+                        <option value="04">04</option>
+                        <option value="05">05</option>
+                        <option value="06">06</option>
+                        <option value="07">07</option>
+                        <option value="08">08</option>
+                        <option value="09">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="24">24</option>
+                        <option value="25">25</option>
+                        <option value="26">26</option>
+                        <option value="27">27</option>
+                        <option value="28">28</option>
+                        <option value="29">29</option>
+                        <option value="30">30</option>
+                        <option value="31">31</option>
+                    </select>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          
+        </div>
+        <div id="but">
+          <button type="button" style="border: none;"><img src="/img/customer/btn_confirm.gif" alt=""></button>
+          <button type="button"  style="border: none;"><img src="/img/customer/btn_cancel.gif" alt=""></button>
+        </div>
 
+
+      </div>
+  </div>    
 
   <!-- 푸터 -->
   <div id="footer"></div>
