--- a/member/idFind.html
+++ b/member/idFind.html
@@ -31,7 +31,7 @@
     <div id="idfind4">
       <input type="image" src="/img/member/btn_confirm.gif" onclick="submit();">
     </div>
-    <div id="idfind5"></div>
+    <div id="idfind5">
       <input type="image" src="/img/member/btn_close.gif" onclick="window.close();">
     </div>
   </div>
