--- a/member/join3.html
+++ b/member/join3.html
@@ -82,11 +82,11 @@
               </tr>
               <tr>
                 <td class="title3">이름</td>
-                <td class="sent"><input type="text" class="textform"> </td>
+                <td class="sent"><input type="text" class="textform" style="width:150px;"></td>
               </tr>
               <tr>
                 <td class="title3">이메일</td>
-                <td class="sent"><input type="text" class="textform">@<input type="text" class="textform" style="margin-left: 5px;"></td>
+                <td class="sent"><input type="text" class="textform" style="width:150px;">@<input type="text" class="textform" style="margin-left: 5px; width:150px;"></td>
               </tr>
               <tr>
                 <td class="title3">이메일 수신여부</td>
