--- a/main.html
+++ b/main.html
@@ -174,6 +174,7 @@
       <a href="">· 새로운 공지사항을 알려드립니다</a><br>
     </div>
   </div>
+  <div id="cscenter-3">
   <div id="cs-3">
     <a href="customer/customer02.html">
       <img src="/img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
@@ -194,6 +195,7 @@
       <h6>오시는 길</h6>
       <p>당사의 약도 및 연락처를 보실 수 있습니다.</p>
     </a>
+  </div>
   </div>
 </div>
 
