--- a/customer/customer01.html
+++ b/customer/customer01.html
@@ -121,19 +121,19 @@
               </tr>
               <tr>
                 <td class="title3">이메일</td>
-                <td class="sent"><input type="text" class="textform"> </td>
+                <td class="sent"><input type="text" class="textform" style="width: 400px;"> </td>
               </tr>
               <tr>
                 <td class="title3">주소</td>
-                <td class="sent"><input type="text" class="textform"> </td>
+                <td class="sent"><input type="text" class="textform" style="width: 400px;"> </td>
               </tr>
               <tr>
                 <td class="title3">제목</td>
-                <td class="sent"><input type="text" class="textform"> </td>
+                <td class="sent"><input type="text" class="textform" style="width: 400px;"> </td>
               </tr>
               <tr>
                 <td class="title3">설명</td>
-                <td class="sent"><input type="text" class="textform"> </td>
+                <td class="sent"><textarea class="textform" style="width: 700px; height:300px;"></textarea></td>
               </tr>
             </tbody>
           </table>
