--- a/member/join.html
+++ b/member/join.html
@@ -29,7 +29,8 @@
         alert("아이디를 정확히 입력하세요 (4글자 이상)");
         return false;
       }
-      window.open("join2.html","_self")
+      window.open ("idFind2.html", "_self")
+      
     }
 
     var isEmpty = function(value){
@@ -41,6 +42,8 @@
         return false;
       }
     };
+
+    
   </script>
 
 </head>
@@ -77,7 +80,7 @@
     <p>-이름과 이메일을 입력해 주시면 가입여부를 확인 후 회원가입 절차가 이루어집니다.</p>
   </div>
   <div class="form">
-    <div id="join3">
+  <div id="join3">
     <div id="join4">
       <img src="/img/member/img_name.gif" alt=""><input type="text" class="name"><br>
       <img src="/img/member/img_email.gif" alt=""><input type="email" class="name">
