--- a/member/idFind2.html
+++ b/member/idFind2.html
@@ -4,36 +4,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원비밀번호 찾기</title>
+  <title>회원아이디 찾기</title>
 
-  <link rel="stylesheet" href="/css/member/passwordFind.css">
+  <link rel="stylesheet" href="/css/member/idFind.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <!-- Bootstarp JS -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-
+<script>
+    function idfind() {
+      window.open("join2.html",  "_self" )
+    }
+</script>
 </head>
 <body>
-  <div id="pwfind">
-    <div id="pwfind1">
-      <p>비밀번호 찾기</p>
+  <div id="joinfind">
+    <div id="joinfind1">
+      <p>회원가입여부 및 실명확인</p>
     </div>
-    <div id="pwfind2">
-      <p>비밀번호를 잊어버리셨나요?<br>
-         회원님의 성명과 이메일을 입력하여 주세요.</p>
+    <div id="joinfind2">
+      <h6 style="font-weight: bold; color:rgb(255, 94, 0);">등록된 회원이 아닙니다.</h6>
+      <h6>회원으로 가입하시면 보다 다양한 서비스를 받으실 수 있습니다.</h6>
     </div>
-    <div id="pwfind3">
-        <img src="/img/member/txt_join1.gif" alt=""><input type="text" class="txtml"><br>
-        <img src="/img/member/txt_login_01.gif" alt="" style="margin-right: 10px;"><input type="text" class="txtml"><br>
-        <img src="/img/member/txt_join3.gif" alt=""><input type="email" class="txtml"><br>
+    <div id="joinfind4">
+      <input type="image" src="/img/member/btn_join.gif"  onclick="idfind()">
     </div>
-    <div id="pwfind4">
-      <input type="image" src="/img/member/btn_confirm.gif" onclick="submit();">
-    </div>
-    <div id="pwfind5">
-      <img src="/img/member/btn_close.gif" onclick="window.close();">
+    <div id="joinfind5">
+      <input type="image" src="/img/member/btn_close.gif" onclick="window.close();">
     </div>
   </div>
   <script>
