--- a/member/join3.html
+++ b/member/join3.html
@@ -23,6 +23,7 @@
       $('#header').load("/header.html");     
       $('#footer').load("/footer.html");
     });
+
   </script>
 
 </head>
@@ -70,7 +71,7 @@
             <tbody>
               <tr>
                 <td class="title3">아이디</td>
-                <td class="sent"><input type="text" class="textform"><img src="/img/member/btn_iddupl.gif" alt="">(영문 소문자, 숫자4~16자)</td>
+                <td class="sent"><input type="text" class="textform"><img src="/img/member/btn_iddupl.gif">(영문 소문자, 숫자4~16자)</td>
               </tr>
               <tr>
                 <td class="title3">비밀번호</td>
@@ -118,7 +119,7 @@
               </tr>
               <tr>
                 <td class="title3">비밀번호 확인시 답변</td>
-                <td class="sent"><input type="text" class="textform"> </td>
+                <td class="sent"><input type="text" class="textform" style="width:200px;""> </td>
               </tr>
               <tr>
                 <td class="title3">성별</td>
