--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 <h1>THE SPECIAL DESIGN GROUP</h1>
 <p>파이브스톤은 다양한 환경에 적응하며 경쟁하기 위해 디자인 역량과 기술력에 집중하고<br>
 고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다.</p>
-<a href="/company/company01.html" type="button" class="btn btn-outline-secondary" id="lmore">Lean more</a>
+<a href="./company/company01.html" type="button" class="btn btn-outline-secondary" id="lmore">Lean more</a>
 </div>
 <!-- 섹션3 -->
 <!-- <div id="container">
@@ -42,7 +42,7 @@
       <div class="proSection2">
         <div class="contents1 con1 ">
           <a href="#">
-            <img src="/img/m-op01.jpg">
+            <img src="../img/m-op01.jpg">
             <div class="overlay">
               <div class="con2">
                 <p>DFSA 101</p>
@@ -54,7 +54,7 @@
         <div class="proSection3 ">
           <div class="contents2 con1">
             <a href="#">
-              <img src="/img/m-op02.jpg">
+              <img src="../img/m-op02.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 102</p>
@@ -65,7 +65,7 @@
           </div>
           <div class="contents3 con1">
             <a href="#">
-              <img src="/img/m-op03.jpg">
+              <img src="../img/m-op03.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 103</p>
@@ -76,7 +76,7 @@
           </div>
           <div class="contents4 con1">
             <a href="#">
-              <img src="/img/m-op04.jpg">
+              <img src="../img/m-op04.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 104</p>
@@ -87,7 +87,7 @@
           </div>
           <div class="contents5 con1">
             <a href="#">
-              <img src="/img/m-op05.jpg">
+              <img src="../img/m-op05.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 105</p>
@@ -111,7 +111,7 @@
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="img/m-mb01.jpg" alt=""></a>
+    <a href=""> <img src="../img/m-mb01.jpg" alt=""></a>
     </div>
     <p class="busititle">사업분야01</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
@@ -121,7 +121,7 @@
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="img/m-mb02.jpg" alt=""></a></div>
+    <a href=""> <img src="../img/m-mb02.jpg" alt=""></a></div>
     <p class="busititle">사업분야02</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
@@ -130,7 +130,7 @@
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="img/m-mb03.jpg" alt=""></a></div>
+    <a href=""> <img src="../img/m-mb03.jpg" alt=""></a></div>
     <p class="busititle">사업분야03</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
