--- a/business/business01.html
+++ b/business/business01.html
@@ -19,9 +19,9 @@
 
   <script>
     $(document).ready(function(){
-      $('#headerTop').load("/headerTop.html");
-      $('#header').load("/header.html");     
-      $('#footer').load("/footer.html");
+      $('#headerTop').load("./headerTop.html");
+      $('#header').load("./header.html");     
+      $('#footer').load("./footer.html");
     });
   </script>
 
@@ -36,14 +36,14 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>BUSINESS</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 사업분야 > 사업분야01</p>
+          <p><img src="../img/icon-home.png"> > 사업분야 > 사업분야01</p>
         </div>
       </div>
     </div>
