--- a/business/business01.html
+++ b/business/business01.html
@@ -7,9 +7,9 @@
   <title>사업분야01</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/business/business01.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/business/business01.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -50,7 +50,7 @@
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
