--- a/company/company01.html
+++ b/company/company01.html
@@ -15,9 +15,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/company/company01.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/company/company01.css">
   
   <script>
     $(document).ready(function(){
@@ -39,21 +39,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual01.jpg" 
+      <img src="../img/member/sub-visual01.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>COMPANY</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 회사소개 > 회사개요</p>
+          <p><img src="../img/icon-home.png"> > 회사소개 > 회사개요</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -105,13 +105,13 @@
           고객과의 친밀한 소통과 협력을 통해 최고의 품질을 제공하고 있습니다.
       </p>  
       <div class="col-12">
-        <img src="/img/company/img0101.gif" class="rounded mx-auto d-block" alt="..." style="margin: 40px 0;"><br>
+        <img src="../img/company/img0101.gif" class="rounded mx-auto d-block" alt="..." style="margin: 40px 0;"><br>
       </div>
     </div>
     <div id="con-c">
     <div class="row" id="con">
       <div class="col">
-        <img src="/img/company/img0102.jpg" style="width: 100%;">
+        <img src="../img/company/img0102.jpg" style="width: 100%;">
       </div>
       <div class="col">
           <h5>파이브스톤은 끊임없는 열정으로<br>
@@ -142,28 +142,28 @@
     <div class="d-flex justify-content-center">
 
     <div class="card" style="width: 25%; min-height: 250px;">
-      <img src="/img/company/img0103.png" class="card-img-top" alt="...">
+      <img src="../img/company/img0103.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">CREATIVE</h5>
         <p class="card-text">파이브스톤은 창조적인 디자인으로 고객과 함께합니다.</p>
       </div>
     </div>
     <div class="card" style="width: 25%; min-height: 250px;">
-      <img src="/img/company/img0104.png" class="card-img-top" alt="...">
+      <img src="../img/company/img0104.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">CONFIDENCE</h5>
         <p class="card-text">파이브스톤은 고객과의 신뢰를 최우선으로 생각합니다.</p>
       </div>
     </div>
     <div class="card"style="width: 25%; min-height: 250px;">
-      <img src="/img/company/img0105.png" class="card-img-top" alt="...">
+      <img src="../img/company/img0105.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">PARTNERSHIP</h5>
         <p class="card-text">파이브스톤은 고객과의 협력을 통해 파트너쉽을 쌓아갑니다.</p>
       </div>
     </div>
     <div class="card" style="width: 25%; min-height: 250px;">
-      <img src="/img/company/img0106.png" class="card-img-top" alt="...">
+      <img src="../img/company/img0106.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">PASSION</h5>
         <p class="card-text">파이브스톤은 끊임없는 열정으로 고객과 함께 성장합니다.</p>
