--- a/customer/customer02.html
+++ b/customer/customer02.html
@@ -7,9 +7,9 @@
   <title>묻고답하기</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/customer/customer02.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/customer/customer02.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -42,21 +42,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>COSTOMER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 고객지원 > 묻고답하기</p>
+          <p><img src="../img/icon-home.png"> > 고객지원 > 묻고답하기</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -84,11 +84,11 @@
               묻고답하기
           </a>
           <ul class="dropdown-menu asd">
-            <li><a class="dropdown-item" href="/customer/costomer01.html">1:1문의</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer01.html">1:1문의</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/customer/costomer02.html">묻고답하기</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer02.html">묻고답하기</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/customer/costomer03.html">FAQ</a></li>
+            <li><a class="dropdown-item" href="../customer/costomer03.html">FAQ</a></li>
           </ul>
         </li>
       </ul>
@@ -114,37 +114,37 @@
         <tbody>
           <tr>
             <th scope="row">5</th>
-            <td><a href="" class="tdtitle"><img src="/img/customer/icon_sct.gif" style="margin-right: 5px;">제목</a></td>
+            <td><a href="" class="tdtitle"><img src="../img/customer/icon_sct.gif" style="margin-right: 5px;">제목</a></td>
             <td style="text-align: center;">작성자1</td>
             <td style="text-align: center;">2022-07-01</td>
           </tr>
           <tr>
             <th scope="row">4</th>
-            <td><a href="" class="tdtitle"><img src="/img/customer/icon_sct.gif" style="margin-right: 5px;">ㅇㅅㅇ</a></td>
+            <td><a href="" class="tdtitle"><img src="../img/customer/icon_sct.gif" style="margin-right: 5px;">ㅇㅅㅇ</a></td>
             <td style="text-align: center;">작성자2</td>
             <td style="text-align: center;">2022-07-01</td>
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td><a href="" class="tdtitle"><img src="/img/customer/icon_sct.gif" style="margin-right: 5px;">test</a></td>
+            <td><a href="" class="tdtitle"><img src="../img/customer/icon_sct.gif" style="margin-right: 5px;">test</a></td>
             <td style="text-align: center;">the Bird</td>
             <td style="text-align: center;">2022-06-27</td>
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td><a href="" class="tdtitle"><img src="/img/customer/icon_sct.gif" style="margin-right: 5px;">test</a></td>
+            <td><a href="" class="tdtitle"><img src="../img/customer/icon_sct.gif" style="margin-right: 5px;">test</a></td>
             <td style="text-align: center;">sss</td>
             <td style="text-align: center;">2022-06-22</td>
           </tr>
           <tr>
             <th scope="row">1</th>
-            <td><a href="" class="tdtitle"><img src="/img/customer/icon_sct.gif" style="margin-right: 5px;">aaa</a></td>
+            <td><a href="" class="tdtitle"><img src="../img/customer/icon_sct.gif" style="margin-right: 5px;">aaa</a></td>
             <td style="text-align: center;">sss</td>
             <td style="text-align: center;">2022-06-01</td>
           </tr>
         </tbody>
       </table>
-      <button type="button" id="write" style="border: none;"><img src="/img/customer/write.gif" onclick="writebutton()"></button>
+      <button type="button" id="write" style="border: none;"><img src="../img/customer/write.gif" onclick="writebutton()"></button>
     </div>
 
 
@@ -155,7 +155,7 @@
         <option value="3">작성자</option>
       </select>
       <input type="text" name="src" id="src">
-      <button class="cussrh" onclick="searchbutton()"><img src="/img/customer/search.gif"></button>
+      <button class="cussrh" onclick="searchbutton()"><img src="../img/customer/search.gif"></button>
     </div>  
   </div>  
   <!-- search bar -->
