--- a/footer-sub.html
+++ b/footer-sub.html
@@ -14,9 +14,9 @@
     COPYRIGHT 2020 FIVESTONE, ALL RIGHT RESERVED.</p>
   </div>
   <div dir="ftic">
-    <img src="./img/mf-icon01.png" alt="">
-    <img src="./img/mf-icon02.png" alt="">
-    <img src="./img/mf-icon03.png" alt="">
-    <img src="./img/mf-icon04.png" alt="">
+    <img src="../img/mf-icon01.png" alt="">
+    <img src="../img/mf-icon02.png" alt="">
+    <img src="../img/mf-icon03.png" alt="">
+    <img src="../img/mf-icon04.png" alt="">
   </div>
 </div>
