--- a/member/idFind.html
+++ b/member/idFind.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원아이디 찾기</title>
 
-  <link rel="stylesheet" href="/css/member/idFind.css">
+  <link rel="stylesheet" href="../css/member/idFind.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -25,14 +25,14 @@
          회원님의 성명과 이메일을 입력하여 주세요.</p>
     </div>
     <div id="idfind3">
-        <img src="/img/member/txt_join1.gif" alt=""><input type="text" class="txtml"><br>
-        <img src="/img/member/txt_join3.gif" alt=""><input type="email" class="txtml"><br>
+        <img src="../img/member/txt_join1.gif" alt=""><input type="text" class="txtml"><br>
+        <img src="../img/member/txt_join3.gif" alt=""><input type="email" class="txtml"><br>
     </div>
     <div id="idfind4">
-      <input type="image" src="/img/member/btn_confirm.gif" onclick="submit();">
+      <input type="image" src="../img/member/btn_confirm.gif" onclick="submit();">
     </div>
     <div id="idfind5">
-      <input type="image" src="/img/member/btn_close.gif" onclick="window.close();">
+      <input type="image" src="../img/member/btn_close.gif" onclick="window.close();">
     </div>
   </div>
   <script>
