--- a/member/idFind2.html
+++ b/member/idFind2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원가입여부</title>
 
-  <link rel="stylesheet" href="/css/member/idFind.css">
+  <link rel="stylesheet" href="../css/member/idFind.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -29,10 +29,10 @@
       <h6>회원으로 가입하시면 보다 다양한 서비스를 받으실 수 있습니다.</h6>
     </div>
     <div id="joinfind4">
-      <input type="image" src="/img/member/btn_join.gif"  onclick="idfind()">
+      <input type="image" src="../img/member/btn_join.gif"  onclick="idfind()">
     </div>
     <div id="joinfind5">
-      <input type="image" src="/img/member/btn_close.gif" onclick="window.close();">
+      <input type="image" src="../img/member/btn_close.gif" onclick="window.close();">
     </div>
   </div>
   <script>
