--- a/member/join.html
+++ b/member/join.html
@@ -7,9 +7,9 @@
   <title>회원가입</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/member/join.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/member/join.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -56,14 +56,14 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>MEMBER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 회원가입</p>
+          <p><img src="../img/icon-home.png"> > 회원가입</p>
         </div>
       </div>
     </div>
@@ -82,11 +82,11 @@
   <div class="form">
   <div id="join3">
     <div id="join4">
-      <img src="/img/member/img_name.gif" alt=""><input type="text" class="name"><br>
-      <img src="/img/member/img_email.gif" alt=""><input type="email" class="name">
+      <img src="../img/member/img_name.gif" alt=""><input type="text" class="name"><br>
+      <img src="../img/member/img_email.gif" alt=""><input type="email" class="name">
     </div>  
     <div id="submit">
-      <img src="/img/member/btn_confirm01.gif" onclick="submitbutton()"></a>
+      <img src="../img/member/btn_confirm01.gif" onclick="submitbutton()"></a>
     </div>
   </div>
   </div>
