--- a/member/join3.html
+++ b/member/join3.html
@@ -7,9 +7,9 @@
   <title>회원가입3</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/member/join.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/member/join.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -36,14 +36,14 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>MEMBER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 회원가입</p>
+          <p><img src="../img/icon-home.png"> > 회원가입</p>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
             <tbody>
               <tr>
                 <td class="title3">아이디</td>
-                <td class="sent"><input type="text" class="textform"><img src="/img/member/btn_iddupl.gif">(영문 소문자, 숫자4~16자)</td>
+                <td class="sent"><input type="text" class="textform"><img src="../img/member/btn_iddupl.gif">(영문 소문자, 숫자4~16자)</td>
               </tr>
               <tr>
                 <td class="title3">비밀번호</td>
@@ -208,8 +208,8 @@
           
         </div>
         <div id="but">
-          <button type="button" style="border: none;"><img src="/img/customer/btn_confirm.gif" alt=""></button>
-          <button type="button"  style="border: none;"><img src="/img/customer/btn_cancel.gif" alt=""></button>
+          <button type="button" style="border: none;"><img src="../img/customer/btn_confirm.gif" alt=""></button>
+          <button type="button"  style="border: none;"><img src="../img/customer/btn_cancel.gif" alt=""></button>
         </div>
 
 
