--- a/member/login.html
+++ b/member/login.html
@@ -7,9 +7,9 @@
   <title>로그인</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/member/login.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/member/login.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -70,14 +70,14 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual01.jpg" 
+      <img src="../img/member/sub-visual01.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>MEMBER</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 로그인</p>
+          <p><img src="../img/icon-home.png"> > 로그인</p>
         </div>
       </div>
     </div>
@@ -97,13 +97,13 @@
       <p class="idpw">비밀번호<input type="password" class="password"  style="margin-left: 9px;"></p>
       </div>
       <div id="submit">
-      <button type="button" class="submit"><img src="/img/member/btn_login.gif" onclick="submitbutton()"></button> 
+      <button type="button" class="submit"><img src="../img/member/btn_login.gif" onclick="submitbutton()"></button> 
       </div>
     </div>
     <div class="form-group2">
       <div class="login2">
-      <p>-아이디를 잊으셨나요?<a href=""><img src="/img/member/btn_id_find.gif" onclick="idfind()"></a></p>
-      <p>-비밀번호를 잊으셨나요?<a href=""><img src="/img/member/btn_pw_find.gif" onclick="pwfind()"></a></p>
+      <p>-아이디를 잊으셨나요?<a href=""><img src="../img/member/btn_id_find.gif" onclick="idfind()"></a></p>
+      <p>-비밀번호를 잊으셨나요?<a href=""><img src="../img/member/btn_pw_find.gif" onclick="pwfind()"></a></p>
     </div>
     </div>
   </div>
