--- a/product/product01.html
+++ b/product/product01.html
@@ -7,9 +7,9 @@
   <title>제품안내01</title>
 
   <!-- Main CSS : Header, Main, Footer -->
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/product/product01.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/product/product01.css">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -36,21 +36,21 @@
   <!-- COMMON -->
   <div class="commonSection1">
     <div class="commonContent1">
-      <img src="/img/member/sub-visual02.jpg" 
+      <img src="../img/member/sub-visual02.jpg" 
           style="width: 100%; height: 100%;">
       <div class="commonContent2 text-center">
         <div>
           <h3>PRODUCT</h3>
         </div>
         <div>
-          <p><img src="/img/icon-home.png"> > 제품안내 > 제품안내01</p>
+          <p><img src="../img/icon-home.png"> > 제품안내 > 제품안내01</p>
         </div>
       </div>
     </div>
   </div>
   <!-- COMMON - 드랍다운 -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/index.html"><button class="homeBtn">H</button></a>
+    <a class="navbar-brand" href="../index.html"><button class="homeBtn">H</button></a>
       <ul class="navbar-nav mr-auto navbar-nav-scroll" 
           style="max-height: 100px;">
         
@@ -96,14 +96,14 @@
       <p id="eng">The design and maintenance are excellent.</p>
     </div>
     <div id="product2">
-      <div class="prd1"><img src="/img/product/1.jpg" alt="1"><br>FS108</div>
-      <div class="prd1"><img src="/img/product/2.jpg" alt="1"><br>FS107</div>
-      <div class="prd1"><img src="/img/product/3.jpg" alt="1"><br>FS106</div>
-      <div class="prd1"><img src="/img/product/4.jpg" alt="1"><br>FS105</div>
-      <div class="prd1"><img src="/img/product/5.jpg" alt="1"><br>FS104</div>
-      <div class="prd1"><img src="/img/product/6.jpg" alt="1"><br>FS103</div>
-      <div class="prd1"><img src="/img/product/7.jpg" alt="1"><br>FS102</div>
-      <div class="prd1"><img src="/img/product/8.jpg" alt="1"><br>FS101</div>
+      <div class="prd1"><img src="../img/product/1.jpg" alt="1"><br>FS108</div>
+      <div class="prd1"><img src="../img/product/2.jpg" alt="1"><br>FS107</div>
+      <div class="prd1"><img src="../img/product/3.jpg" alt="1"><br>FS106</div>
+      <div class="prd1"><img src="../img/product/4.jpg" alt="1"><br>FS105</div>
+      <div class="prd1"><img src="../img/product/5.jpg" alt="1"><br>FS104</div>
+      <div class="prd1"><img src="../img/product/6.jpg" alt="1"><br>FS103</div>
+      <div class="prd1"><img src="../img/product/7.jpg" alt="1"><br>FS102</div>
+      <div class="prd1"><img src="../img/product/8.jpg" alt="1"><br>FS101</div>
     </div>
     <div id="srcbar">
       <select name="search" class="srh">
@@ -112,7 +112,7 @@
         <option value="3">작성자</option>
       </select>
       <input type="text" name="src" id="src">
-      <button class="cussrh"><img src="/img/customer/search.gif"></button>
+      <button class="cussrh"><img src="../img/customer/search.gif"></button>
     </div>
   </div>
   <!-- search bar -->
