--- a/main.html
+++ b/main.html
@@ -2,13 +2,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/visual01.jpg" class="d-block w-100" alt="img/visual01.jpg">
+        <img src="./img/visual01.jpg" class="d-block w-100" alt="img/visual01.jpg">
       </div>
       <div class="carousel-item">
-        <img src="img/visual02.jpg" class="d-block w-100" alt="img/visual02.jpg">
+        <img src="./img/visual02.jpg" class="d-block w-100" alt="img/visual02.jpg">
       </div>
       <div class="carousel-item">
-        <img src="img/visual03.jpg" class="d-block w-100" alt="img/visual03.jpg">
+        <img src="./img/visual03.jpg" class="d-block w-100" alt="img/visual03.jpg">
       </div>
     </div>
    <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
@@ -176,22 +176,22 @@
   </div>
   <div id="cscenter-3">
   <div id="cs-3">
-    <a href="customer/customer02.html">
-      <img src="./img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
+    <a href="../customer/customer02.html">
+      <img src="../img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>묻고 답하기</h6>
       <p>문의사항을 남기시면 친절히 답변드립니다.</p>
     </a>
   </div>
   <div id="cs-4">
     <a href="#">
-      <img src="./img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
+      <img src="../img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>채용안내</h6>
       <p>당사와 함께할 수 있는 인재를 모집합니다.</p>
     </a>
   </div>
   <div id="cs-5">
-    <a href="./company/company03.html">
-      <img src="./img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
+    <a href="../company/company03.html">
+      <img src="../img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>오시는 길</h6>
       <p>당사의 약도 및 연락처를 보실 수 있습니다.</p>
     </a>
