--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
       <div class="proSection2">
         <div class="contents1 con1 ">
           <a href="#">
-            <img src="../img/m-op01.jpg">
+            <img src="./img/m-op01.jpg">
             <div class="overlay">
               <div class="con2">
                 <p>DFSA 101</p>
@@ -54,7 +54,7 @@
         <div class="proSection3 ">
           <div class="contents2 con1">
             <a href="#">
-              <img src="../img/m-op02.jpg">
+              <img src="./img/m-op02.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 102</p>
