--- a/main.html
+++ b/main.html
@@ -190,7 +190,7 @@
     </a>
   </div>
   <div id="cs-5">
-    <a href="../company/company03.html">
+    <a href="./company/company03.html">
       <img src="../img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>오시는 길</h6>
       <p>당사의 약도 및 연락처를 보실 수 있습니다.</p>
